tests/testcrate/tests/ui/select_join.stderr
error: mismatched types
expected type `ForeignKey<_>`
   found type `String`
  --> $DIR/select_join.rs:38:5
   |
38 |     field1: String,
   |     ^^^^^^^^^^^^^^
...
54 |     sql!(Table.all().join(field1, i32_field));
   |                           ------ in this macro invocation

error: mismatched types
expected type `ForeignKey<_>`
   found type `i32`
  --> $DIR/select_join.rs:39:5
   |
39 |     i32_field: i32,
   |     ^^^^^^^^^^^^^^
...
54 |     sql!(Table.all().join(field1, i32_field));
   |                                   --------- in this macro invocation

error[E0308]: mismatched types
  --> $DIR/select_join.rs:54:27
   |
54 |     sql!(Table.all().join(field1, i32_field));
   |                           ^^^^^^ expected enum `std::option::Option`, found struct `std::string::String`
   |
   = note: expected type `std::option::Option<_>`
              found type `std::string::String`

error[E0308]: mismatched types
  --> $DIR/select_join.rs:54:35
   |
54 |     sql!(Table.all().join(field1, i32_field));
   |                                   ^^^^^^^^^ expected enum `std::option::Option`, found i32
   |
   = note: expected type `std::option::Option<_>`
              found type `i32`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
